@@ -605,8 +605,6 @@ static void status_event(Event_T E, StringBuffer_T B) {
         if (E->message)
                 _escapeCDATA(B, E->message);
         StringBuffer_append(B, "]]></message>");
-        if (E->source->token)
-                StringBuffer_append(B, "<token>%s</token>", E->source->token);
         StringBuffer_append(B, "</event>");
 }
 
